...
    required bool switchOn,
  }) async {
    try {
      final baseUrl = await PrefsService.getBaseUrl();
      final body = {
        "angle": angle,
        "max_force": maxForce,
        "switch_on": switchOn,
      };

      final response = await client.post(
        Uri.parse('$baseUrl/api/robot/gripper'),
        headers: _headers,
...
